# pspeditrt

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
include/pspedit/: pspedit.hpp
include/pspedit/base/: context.hpp
include/pspedit/core/: content.hpp  context.hpp  graphics.hpp  id.hpp  image.hpp  input.hpp  material.hpp  mesh.hpp  scalar.hpp  scene.hpp  script.hpp  transform.hpp
include/pspedit/format/: id_format.hpp  image_format.hpp  material_format.hpp  mesh_format.hpp  scene_format.hpp  transform_format.hpp
include/pspedit/platform/psp/: buffer.hpp  command.hpp  pipeline.hpp  psp_shader.hpp  psp_texture.cpp  psp_texture.hpp  shader.hpp  swapchain.hpp  texture.hpp  vram.hpp
include/pspedit/shared/: shared_image.hpp  shared_transform.hpp
include/pspedit/system/: draw.hpp  loop.hpp  update.hpp
source/: entry.cpp
source/core/: id.cpp
